package com.wilzwert.myjobs.core.domain.model;


/**
 * @author Wilhelm Zwertvaegher
 * Date:12/03/2025
 * Time:15:33
 */
public enum ActivityType {
    CREATION,
    ATTACHMENT_CREATION,
    ATTACHMENT_DELETION,
    APPLICATION,
    RELAUNCH,
    EMAIL,
    TEL_INTERVIEW,
    VIDEO_INTERVIEW,
    PHY_INTERVIEW,
    APPLICANT_REFUSAL,
    COMPANY_REFUSAL
}
