package com.wilzwert.myapps.domain.model;


/**
 * @author Wilhelm Zwertvaegher
 * Date:12/03/2025
 * Time:15:33
 */

public class Activity {
}
